fix: Her content alignemnt to center (#7)

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,3 +1,9 @@
+#hero {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+
 .hero {
   position: relative;
   min-height: 100vh;
